<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarId"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/backButtonId"
                    android:layout_width="?attr/actionBarSize"
                    app:cardCornerRadius="32dp"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/back_button"
                        android:background="@drawable/back_white_24dp" />

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/collectionTitleId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallpaper_settings"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textColor="@color/material_light"
                    android:textSize="18sp"/>


                <androidx.cardview.widget.CardView
                    android:id="@+id/helpButtonId"
                    android:layout_width="?attr/actionBarSize"
                    app:cardCornerRadius="32dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/back_button"
                        android:background="@drawable/help_24dp" />

                </androidx.cardview.widget.CardView>


            </RelativeLayout>


        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="54dp"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <com.droid2developers.liveslider.live_wallpaper.Cube
                    android:id="@+id/cube"
                    android:layout_width="@dimen/cube_size"
                    android:layout_height="@dimen/cube_size"
                    android:layout_gravity="center"
                    android:layout_marginEnd="40dp"
                    android:layout_margin="@dimen/cube_margin" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    app:strokeColor="@color/material_light"
                    app:cardBackgroundColor="@android:color/transparent">

                    <TextView
                        android:id="@+id/face"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="9sp"
                        android:padding="8dp"
                        android:text="@string/default_face"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/calibrationGroup"
                android:layout_gravity="center"
                android:gravity="center"
                app:singleSelection="true"
                app:checkedButton="@+id/defaultCalibration"
                android:layout_marginBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/defaultCalibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_calibration"
                    />
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical_calibration"
                    />
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/dynamicCalibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamic_calibration"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/divider_vertical_margin"
                android:layout_marginBottom="@dimen/divider_vertical_margin"
                android:background="@color/color_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Sensor SeekBar Settings-->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/settings_item_horizontal_margin"
                    android:layout_marginRight="@dimen/settings_item_horizontal_margin"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/settings_item_height"
                            android:layout_gravity="end"
                            android:gravity="center_vertical"
                            android:text="@string/range"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBarRange"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:max="20"
                            android:maxHeight="@dimen/settings_item_height"
                            android:minHeight="@dimen/settings_item_height"
                            android:progress="10" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/settings_item_height"
                            android:layout_gravity="end"
                            android:gravity="center_vertical"
                            android:text="@string/delay"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBarDelay"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:max="20"
                            android:maxHeight="@dimen/settings_item_height"
                            android:minHeight="@dimen/settings_item_height"
                            android:progress="10" />
                    </TableRow>

                </TableLayout>

                <!--View Separator-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/divider_vertical_margin"
                    android:layout_marginBottom="@dimen/divider_vertical_margin"
                    android:background="@color/color_divider" />


                <com.droid2developers.liveslider.views.components.SettingsCardView
                    android:id="@+id/card5ID"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:animateLayoutChanges="true"
                    app:cardIcon="@drawable/battery_24dp"
                    app:cardHeader="@string/power_saver_mode"
                    app:cardSubHeader="@string/pause_everything_in_battery_saver_mode"
                    app:hasSwitch="true" />

                <com.droid2developers.liveslider.views.components.SettingsCardView
                    android:id="@+id/card2ID"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:animateLayoutChanges="true"
                    app:cardIcon="@drawable/slideshow_24dp"
                    app:cardHeader="@string/wallpaper_slideshow"
                    app:cardSubHeader="@string/wallpaper_changes_after_some_time"
                    app:hasSwitch="true" />

                <com.droid2developers.liveslider.views.components.SettingsCardView
                    android:id="@+id/card4ID"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:animateLayoutChanges="true"
                    android:visibility="gone"
                    app:cardIcon="@drawable/double_tap_24dp"
                    app:cardHeader="@string/double_tap_wallpaper"
                    app:cardSubHeader="@string/change_current_wallpaper"
                    app:hasSwitch="true" />

                <com.droid2developers.liveslider.views.components.SettingsCardView
                    android:id="@+id/card3ID"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:animateLayoutChanges="true"
                    android:visibility="gone"
                    app:cardIcon="@drawable/clock_icon"
                    app:cardHeader="Slideshow Time Interval"
                    app:cardSubHeader="15 Minutes (Default)"
                    app:hasSwitch="false" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>